# guess_number

./: LICENSE  README.md  pyproject.toml  requirements.txt
guess_number/: .algokit.toml  README.md  guess_number.code-workspace  pyproject.toml
guess_number/.algokit/: .copier-answers.yml
guess_number/projects/guess_number-contracts/: .algokit.toml  README.md  pyproject.toml
guess_number/projects/guess_number-contracts/.algokit/: .copier-answers.yml
guess_number/projects/guess_number-contracts/smart_contracts/artifacts/guess_number/: GuessNumber.approval.puya.map  GuessNumber.approval.teal
guess_number/projects/guess_number-contracts/smart_contracts/guess_number/: contract.py  deploy_config.py
guess_number/projects/guess_number-frontend/: .algokit.toml  README.md  package-lock.json  package.json
guess_number/projects/guess_number-frontend/.algokit/: .copier-answers.yml
guess_number/projects/guess_number-frontend/src/components/: AppCalls.tsx
